# rsess

./: Cargo.toml  README.md
.github/workflows/: docs.yml  main.yml  pyrsess-ci.yml  release.yml  rsess-ci.yml
pyrsess/: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  example.py  pyproject.toml  pyrsess.pyi
pyrsess/src/: lib.rs
src/: iterators.rs  lib.rs  tests.rs  trellis.rs
